# android_profiler_qt_lib

./: CMakeLists.txt  build.bat  build_android_windows.py
include/: android_profiler.h
src/: android_profiler.cpp  cpu_service.cpp  cpu_service.h  gpu_service.cpp  gpu_service.h  memory_service.cpp  memory_service.h  profiler_service.cpp  profiler_service.h
src/proto/: build.bat
test/: perfd_connect.cpp
tools/: GetThirdParty.py  android.py  third_party.cmake
tools/CI/: Download.py  __init__.py
tools/appveyor/: install_android.bat
